fix(react-smooth-image): not showing properly

--- a/src/Components/Pages/SubPages/tabs.scss
+++ b/src/Components/Pages/SubPages/tabs.scss
@@ -60,10 +60,6 @@ section .pendidikan {
     margin: 0;
   }
 
-  .show {
-
-  }
-
   .read-more {
     font-size: 14px;
     position: absolute;
